Fix coordinates in some message configs (fixes #49)

--- a/common/src/main/resources/locale/lang-bs.yml
+++ b/common/src/main/resources/locale/lang-bs.yml
@@ -59,7 +59,7 @@ click-to-toggle: Click to toggle
 plugin-reloaded: <green><name> v<version> je ponovo učitan
 ui:
     page-title: squaremap - {world}
-    coordinates: Koordinate<br/><x>, <z>
+    coordinates: Koordinate<br/>{x}, {z}
     sidebar:
         player-list: Igrači ({cur}/{max})
         world-list: Svijetovi
