--- a/common/src/main/resources/locale/lang-fr.yml
+++ b/common/src/main/resources/locale/lang-fr.yml
@@ -63,7 +63,7 @@ click-to-toggle: Click to toggle
 plugin-reloaded: <green><name> v<version> rechargé
 ui:
     page-title: squaremap - {world}
-    coordinates: Coordonnées<br/><x>, <z>
+    coordinates: Coordonnées<br/>{x}, {z}
     sidebar:
         player-list: Joueurs ({cur}/{max})
         world-list: Mondes
