--- a/common/src/main/resources/locale/lang-nl.yml
+++ b/common/src/main/resources/locale/lang-nl.yml
@@ -60,7 +60,7 @@ click-to-toggle: Click to toggle
 plugin-reloaded: <green><name> v<version> herladen
 ui:
     page-title: squaremap - {world}
-    coordinates: Coördinaten<br/><x>, <z>
+    coordinates: Coördinaten<br/>{x}, {z}
     sidebar:
         player-list: Spelers ({cur}/{max})
         world-list: Werelden
