--- a/common/src/main/resources/locale/lang-pl.yml
+++ b/common/src/main/resources/locale/lang-pl.yml
@@ -59,7 +59,7 @@ click-to-toggle: Click to toggle
 plugin-reloaded: <green><name> v<version> przeładowano
 ui:
     page-title: squaremap - {world}
-    coordinates: Współrzędne<br/><x>, <z>
+    coordinates: Współrzędne<br/>{x}, {z}
     sidebar:
         player-list: Gracze ({cur}/{max})
         world-list: Światy
