--- a/common/src/main/resources/locale/lang-ru.yml
+++ b/common/src/main/resources/locale/lang-ru.yml
@@ -59,7 +59,7 @@ click-to-toggle: Click to toggle
 plugin-reloaded: <green><name> v<version> перезагружен
 ui:
     page-title: squaremap - {world}
-    coordinates: Координаты<br/><x>, <z>
+    coordinates: Координаты<br/>{x}, {z}
     sidebar:
         player-list: Игроки ({cur}/{max})
         world-list: Миры
