--- a/common/src/main/resources/locale/lang-no.yml
+++ b/common/src/main/resources/locale/lang-no.yml
@@ -25,6 +25,21 @@ command:
                 sekunder
             statusmessage: 'Logg for rendringsfremdrift: <enabled>, intervall: <green><seconds></green>
                 sekunder'
+        help:
+            help: squaremap command help
+            command: Command
+            description: Description
+            no_description: No description
+            arguments: Arguments
+            optional: Optional
+            showing_results_for_query: Showing search results for query
+            no_results_for_query: No results for query
+            available_commands: Available Commands
+            click_to_show_help: Click to show help for this command
+            page_out_of_range: 'Error: Page <page> is not in range. Must be in range
+                [1, <max_pages>]'
+            click_for_next_page: Click for next page
+            click_for_previous_page: Click for previous page
     prefix: '<white>[<gradient:#C028FF:#5B00FF>squaremap</gradient>]</white> '
     description:
         help: Få hjelp til squaremap kommandoer
