--- a/common/src/main/resources/locale/lang-zh-tw.yml
+++ b/common/src/main/resources/locale/lang-zh-tw.yml
@@ -20,6 +20,21 @@ command:
             disabled: <green>渲染進度日誌已禁用
             set-rate: <green>渲染進度日誌的間隔已設置為 </green><seconds> 秒
             statusmessage: '渲染進度日誌狀態: <enabled>, 間隔: <green><seconds></green> 秒'
+        help:
+            help: squaremap command help
+            command: Command
+            description: Description
+            no_description: No description
+            arguments: Arguments
+            optional: Optional
+            showing_results_for_query: Showing search results for query
+            no_results_for_query: No results for query
+            available_commands: Available Commands
+            click_to_show_help: Click to show help for this command
+            page_out_of_range: 'Error: Page <page> is not in range. Must be in range
+                [1, <max_pages>]'
+            click_for_next_page: Click for next page
+            click_for_previous_page: Click for previous page
     prefix: '<white>[<gradient:#C028FF:#5B00FF>squaremap</gradient>]</white> '
     description:
         help: 獲取 squaremap 的命令幫助
