--- a/common/src/main/resources/locale/lang-no.yml
+++ b/common/src/main/resources/locale/lang-no.yml
@@ -13,8 +13,8 @@ command:
         player-not-found-for-input: <red>Ingen spiller funnet for input '<input>'
         console-must-specify-world: <red>Du må spesifisere verden når du kjører denne
             kommandoen fra konsollen
-        no-such-world: <red>Ingen slik verden '<world>'
-        map-not-enabled-for-world: <red>Kart er ikke aktivert for verden '<world>'
+        no-such-world: Ingen slik verden '<world>'
+        map-not-enabled-for-world: Kart er ikke aktivert for verden '<world>'
         confirmation-required: <red>Bekreftelse påkrevd. Bekreft ved å bruke /<command>
             confirm.
         no-pending-commands: <red>Du har ingen ventende kommandoer.
@@ -55,7 +55,7 @@ command:
             string: '''<input>'' is not a valid string of type <string_mode>'
             number: '''<input>'' is not a valid number in the range <min> to <max>'
             location:
-                invalid-format: '''<input>'' is not a valid location. Required format
+                invalid_format: '''<input>'' is not a valid location. Required format
                     is ''<x> <z>'''
                 mixed_local_absolute: Cannot mix local and absolute coordinates. (either
                     all coordinates use '^' or none do)
