--- a/common/src/main/resources/locale/lang-zh-cn.yml
+++ b/common/src/main/resources/locale/lang-zh-cn.yml
@@ -11,8 +11,8 @@ command:
         console-must-specify-player: <red>从控制台执行此命令时必须指定一个玩家
         player-not-found-for-input: <red>没有找到玩家 '<input>'
         console-must-specify-world: <red>从控制台执行此命令时必须指定一个世界
-        no-such-world: <red>没有找到世界 '<world>'
-        map-not-enabled-for-world: <red>世界 '<world>' 的渲染未启用'
+        no-such-world: 没有找到世界 '<world>'
+        map-not-enabled-for-world: 世界 '<world>' 的渲染未启用'
         confirmation-required: <red>请输入 /<command> confirm 确认操作
         no-pending-commands: <red>你没有任何待处理的命令
         progresslogging:
@@ -50,7 +50,7 @@ command:
             string: '''<input>'' is not a valid string of type <string_mode>'
             number: '''<input>'' is not a valid number in the range <min> to <max>'
             location:
-                invalid-format: '''<input>'' is not a valid location. Required format
+                invalid_format: '''<input>'' is not a valid location. Required format
                     is ''<x> <z>'''
                 mixed_local_absolute: Cannot mix local and absolute coordinates. (either
                     all coordinates use '^' or none do)
