--- a/common/src/main/resources/locale/lang-pt-br.yml
+++ b/common/src/main/resources/locale/lang-pt-br.yml
@@ -1,4 +1,4 @@
-# Translators: [DoctaEnkoda]
+# Translators: [zicstardust]
 
 
 render-in-progress: <red>Uma renderização já está em andamento no mundo <world>
