--- a/common/src/main/resources/locale/lang-bs.yml
+++ b/common/src/main/resources/locale/lang-bs.yml
@@ -24,6 +24,7 @@ command:
                 seconds
             statusmessage: 'Render progress logging enabled: <enabled>, interval:
                 <green><seconds></green> seconds'
+        link: "Click to open map: <green><click:open_url:'<link>'><link>"
         help:
             help: squaremap command help
             command: Command
@@ -78,6 +79,7 @@ command:
             rate: Sets the interval in seconds for logging render progress
         hide: Sakrij igrača sa karte
         show: Pokaži igrača na karti
+        link: Get a link to the map at your current location
     argument:
         optional-world: Ako nije navedeno, koristi se trenutni svijet igrača
         optional-center: Ako nije navedeno koristi se (<white>0<gray>,</gray> 0</white>)
