--- a/common/src/main/resources/locale/lang-es-es.yml
+++ b/common/src/main/resources/locale/lang-es-es.yml
@@ -24,6 +24,7 @@ command:
                 seconds
             statusmessage: 'Render progress logging enabled: <enabled>, interval:
                 <green><seconds></green> seconds'
+        link: "Click to open map: <green><click:open_url:'<link>'><link>"
         help:
             help: squaremap command help
             command: Command
@@ -78,6 +79,7 @@ command:
             rate: Sets the interval in seconds for logging render progress
         hide: Oculta a un jugador de la vista del mapa
         show: Muestra a un jugador en la vista del mapa
+        link: Get a link to the map at your current location
     argument:
         optional-world: Selecciona por defecto el mundo actual del jugador si no se
             especifica un mundo
