--- a/common/src/main/resources/locale/lang-pl.yml
+++ b/common/src/main/resources/locale/lang-pl.yml
@@ -24,6 +24,7 @@ command:
                 seconds
             statusmessage: 'Render progress logging enabled: <enabled>, interval:
                 <green><seconds></green> seconds'
+        link: "Click to open map: <green><click:open_url:'<link>'><link>"
         help:
             help: squaremap command help
             command: Command
@@ -78,6 +79,7 @@ command:
             rate: Sets the interval in seconds for logging render progress
         hide: Ukryj gracza na mapie
         show: Pokaż gracza na mapie
+        link: Get a link to the map at your current location
     argument:
         optional-world: Domyślnie aktualny świat gracza, jeśli nie jest określony
         optional-center: Domyślnie (<white>0<gray>,</gray> 0</white>) jeśli nie określono
